apps/base/fieldy-webhook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fieldy-webhook
  namespace: fieldy-webhook
  labels:
    app: fieldy-webhook
spec:
  type: ClusterIP
  selector:
    app: fieldy-webhook
  ports:
    - name: http
      port: 80
      targetPort: http
